--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -31,8 +31,7 @@
             = user.name
           .user__rightbox__top__contents
             .user__rightbox__top__contents__id
-              @
-              = user.acountid
+              @#{user.acountid}
             .user__rightbox__top__contents__gender
               - if user.gender == 1
                 Men
