--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -35,6 +35,7 @@
   }
   &__rightbox {
     &__top {
+      position: relative;
       &__name {
         font-size: 1.5em;
       }
@@ -53,6 +54,29 @@
           padding: 0 0.5em;
           color: #4a4a4a;
           text-decoration: underline;
+        }
+      }
+      &__message {
+        position: absolute;
+        top: 0;
+        right: 1rem;
+        font-size: 1.6rem;
+        color: #3183ff;
+        label {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width:3rem;
+          height:3rem;
+          background-color: #fff;
+          border: 2px solid #3183ff;
+          border-radius: 4rem;
+          cursor: pointer;
+          i {
+          }
+        }
+        label:hover {
+          background-color: #adceff6b;
         }
       }
     }
