--- a/app/assets/stylesheets/layouts/header.scss
+++ b/app/assets/stylesheets/layouts/header.scss
@@ -64,25 +64,63 @@
     }
     &__right {
       position: absolute;
-      top: 50%;
+      // top: 50%;
+      // transform: translate(0, -50%);
+      top:0;
       right: 0;
-      transform: translate(0, -50%);
+      height: 100%;
       display: flex;
-      img {
-        border-radius: 1.5em;
-      }
+      align-items: center;
+      cursor: pointer;
       &__user {
+        img {
+          border-radius: 1.5em;
+        }
         a:hover {
           text-decoration: none;
         }
       }
-      &__devise {
-        &__post {
-          
+      &__user-menu {
+        display: none;
+        position: absolute;
+        top:3.5rem;
+        right: 0;
+        background-color: #fff;
+        z-index: 999;
+        box-shadow: 0 3px 7px 1px rgba(0, 0, 0, 0.3);
+        padding: 1rem 0.7rem 1.4rem 0.7rem;
+        font-size: 80%;
+        width: 13rem;
+        &__list {
+          li {
+            margin-bottom: 0.5rem;
+            a {
+              color: inherit;
+            }
+          }
         }
-        &__signin {
-
+        &__logout {
+          border: solid 1px #cccccc;
+          padding: 0.5rem 3.5rem;
+          background-color: rgb(255, 253, 250);
+          color: #888;
+          border-radius: 0.1rem;
         }
+        &__logout:hover {
+          opacity: 0.6;
+          text-decoration: none;
+          color: #888;
+        }
+      }
+    }
+    &__right:hover {
+      color:rgba(74, 74, 74, 0.8);
+      img {
+        opacity: 0.8;
+      }
+      .header__container__right__user-menu {
+        display: block !important;
+        color:rgb(74, 74, 74)
       }
     }
   }
