--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,25 +16,18 @@
           - else
             = image_tag 'egg-icon-gray.png', size: '40x38'
           @#{current_user.acountid}
-      .header__container__right__user-menu#header-user-menu
-        %ul.header__container__right__user-menu__list
-          %li 
-            = link_to 'マイページ', user_path(current_user.id)
-          %li 
-            = link_to 'ダイレクトメッセージ', room_path(current_user.id)
-          %li 
-            = link_to 'スタイル投稿', new_post_path(current_user.id)
-          %li 
-            = link_to 'ユーザー情報編集', edit_user_registration_path(current_user.id)
-        = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'header__container__right__user-menu__logout', data: { confirm: 'ログアウトすんの？' }
-        
-        
-  -# .header__container__right__devise
-  -#   - if user_signed_in?
-  -#     .header__container__post
-  -#       = link_to "logout", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトすんの？' }
-  -#       = link_to "投稿", new_post_path, class: 'newpost-btn'
-  -#   - else
-  -#     .header__container__signin
-  -#       = link_to "login", new_user_session_path, class: ''
-  -#       = link_to "登録", new_user_registration_path, class: ''
+        .header__container__right__user-menu#header-user-menu
+          %ul.header__container__right__user-menu__list
+            %li 
+              = link_to 'マイページ', user_path(current_user.id)
+            %li 
+              = link_to 'ダイレクトメッセージ', room_path(current_user.id)
+            %li 
+              = link_to 'スタイル投稿', new_post_path(current_user.id)
+            %li 
+              = link_to 'ユーザー情報編集', edit_user_registration_path(current_user.id)
+          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'header__container__right__user-menu__logout', data: { confirm: 'ログアウトすんの？' }
+      - else
+        .header__container__signin
+          = link_to "login", new_user_session_path, class: ''
+          = link_to "登録", new_user_registration_path, class: ''
