--- a/app/assets/stylesheets/posts/_post.scss
+++ b/app/assets/stylesheets/posts/_post.scss
@@ -38,7 +38,7 @@
     }
     &__follow-trash {
       button {
-        font-size: 0.5vh;
+        font-size: 0.5rem;
         width: 4rem;
         height: 2rem;
         padding: 0 0 !important;
