add-gender-free

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,6 +22,7 @@
     <%=f.label :gender, "性別" %><br />
     <%=f.radio_button :gender, 1, autofocus: true%>Men
     <%=f.radio_button :gender, 2, autofocus: true%>Women
+    <%=f.radio_button :gender, 3, autofocus: true%>Free
   </div>
 
   <div class="field">
