--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -3,7 +3,7 @@
     探す
   %ul.sidebar__search__list.sidebar__content__list
     %li.sidebar__search__list__style
-      = link_to posts_path do
+      = link_to search_posts_path do
         = icon 'fas', 'camera-retro', class: 'search-icon'
         %span スタイルを探す
     %li.sidebar__search__list__salon
