--- a/app/assets/stylesheets/shared/_gender-select.scss
+++ b/app/assets/stylesheets/shared/_gender-select.scss
@@ -8,7 +8,7 @@
     display: flex;
     width:35%;
     li {
-      width: 20%;
+      width: 18.5%;
       line-height: 3em;
       text-align: center;
       opacity: 0.4;
@@ -18,10 +18,11 @@
       margin-bottom: -2px !important;
       border-bottom: solid 2px rgba(0, 0, 0, 1);
     }
-    li:nth-child(2n) {
-      margin: 0 20% 0;
-      // border-bottom: solid 2px rgba(0, 0, 0, 0.8);
-      // opacity: 1;
+    #genderWomen {
+      margin: 0 10% 0;
+    }
+    #genderMen {
+      margin-right:10%;
     }
     .active {
       opacity: 1.0;
