--- a/app/views/users/timeline.html.haml
+++ b/app/views/users/timeline.html.haml
@@ -8,7 +8,7 @@
         = render partial: 'posts/post', collection: @posts
     .genderWomen
       .posts
-        = render partial: 'posts/post', collection: @Womenposts
+        = render partial: 'posts/post', collection: @womenPosts
     .genderMen
       .posts
         = render partial: 'posts/post', collection: @menPosts
