--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -32,10 +32,13 @@
         .user__rightbox__top__contents__id
           @#{@user.acountid}
         .user__rightbox__top__contents__gender
-          - if @user.gender == 1
+          - case @user.gender
+          - when 1
             Men
-          - else
+          - when 2
             Women
+          - when 3
+            free
         - if @user.salon
           = link_to salon_path(@user.salon), class: 'user__rightbox__top__contents__salon' do
             = salon_name(@user.salon)
