--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -4,9 +4,9 @@
     border-bottom: solid 1px  rgb(204, 204, 204);
     // box-shadow:0px 4px 10px rgba(68, 68, 68, 0.3);
     box-shadow: 0 3px 7px 1px rgba(0, 0, 0, 0.3);
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.9);
     position: fixed;
-    z-index: 998;
+    z-index: 1;
     left: 0;
     top: 3.5em;
     width: 100%;
