markup-post-new

--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,16 +1,72 @@
--# salon,gender,style
-= form_with(model: @post, local: true) do |f|
-  %h3
-    投稿する
-  = f.text_field :title
-  = f.fields_for :images do |img|
-    = img.file_field :image, name: "post[images_attributes][0][image]", type: "file"
-    = img.file_field :image, name: "post[images_attributes][1][image]", type: "file"
-    = img.file_field :image, name: "post[images_attributes][2][image]", type: "file"
-    = img.file_field :image, name: "post[images_attributes][3][image]", type: "file"
-    = img.file_field :image, name: "post[images_attributes][4][image]", type: "file"
-    = img.file_field :image, name: "post[images_attributes][5][image]", type: "file"
-  = f.text_area :body, placeholder: "text" , rows: "10"
-  = f.collection_select :length_id, Length.all, :id, :name, {prompt: '---'}
-  = f.collection_select :salon_id, Salon.all, :id, :name, {prompt: '---'}
-  = f.submit "SEND"
+= form_with(model: @post, local: true, class:'post-new') do |f|
+  .post-new__head
+    .post-new__head__contents
+      = icon 'fas', 'camera-retro', class: 'search-icon'
+      %span スタイルを投稿する
+  .post-new__form
+    .post-new__form__image.form-content
+      .post-new__form__image__head.form-content__head
+        スタイル画像
+      .post-new__form__image__form.form-content__content
+        = f.fields_for :images do |img|
+          = img.file_field :image, name: "post[images_attributes][0][image]", type: "file"
+          = img.file_field :image, name: "post[images_attributes][1][image]", type: "file"
+          = img.file_field :image, name: "post[images_attributes][2][image]", type: "file"
+          = img.file_field :image, name: "post[images_attributes][3][image]", type: "file"
+    .post-new__form__item-brand
+      .post-new__form__item__head.form-content__head
+        アイテム
+      .post-new__form__item-brand__bland
+        %input.post-new__form__item-brand__bland__search{placeholder: "アイテムのブランドを入力してください", type: "text"}
+      .post-new__form__item-brand__item
+        %select.post-new__form__item-brand__item__select{name: "post[item_id]"}
+          %option{value: ""} ---
+
+
+        -# = f.collection_select :item_id, Item.all, :id, :name, {prompt: '---'},{name:"post[item_ids][0]"}
+        -# = f.collection_select :item_id, Item.all, :id, :name, {prompt: '---'},{name:"post[item_ids][1]"}
+      -# .post-new__form__item-brand__item
+      -#   %input
+    .post-new__form__title.form-content
+      .post-new__form__title__head.form-content__head
+        タイトル
+      .post-new__form__title__form.form-content__content
+        = f.text_field :title
+    .post-new__form__body.form-content
+      .post-new__form__body__head.form-content__head
+        スタイル紹介
+      .post-new__form__body__form.form-content__content
+        = f.text_area :body, placeholder: "text" , rows: "10"
+    .post-new__form__salon.form-content
+      .post-new__form__salon__head.form-content__head
+        サロン
+      .post-new__form__salon__area.form-content__content
+        = f.collection_select :area_id, Area.all, :id, :name, {prompt: '---'}
+        = f.collection_select :salon_id, Salon.all, :id, :name, {prompt: '---'}
+      -# .post-new__form__salon__salon
+      -#   = f.collection_select :salon_id, Salon.all, :id, :name, {prompt: '---'}
+    .post-new__form__gender.form-content
+      .post-new__form__gender__head.form-content__head
+        性別
+      .post-new__form__gender__select.form-content__content
+        %label
+          = f.radio_button :gender, "1"
+          Men
+        %label
+          = f.radio_button :gender, "2"
+          Women
+        %label
+          = f.radio_button :gender, "3"
+          Free
+    .post-new__form__length.form-content
+      .post-new__form__length__head.form-content__head
+        Length
+      .post-new__form__length__select.form-content__content
+        = f.collection_select :length_id, Length.all, :id, :name, {prompt: '---'}
+    .post-new__form__age.form-content
+      .post-new__form__age__head.form-content__head
+        年齢
+      .post-new__form__age__select.form-content__content
+        = f.number_field :age, class: "", min: 1, max: 100
+  .post-new__submit
+    = f.submit "投稿する", class: 'post-new__submit__btn'
