--- a/app/assets/stylesheets/posts/_post.scss
+++ b/app/assets/stylesheets/posts/_post.scss
@@ -9,11 +9,13 @@
     position: relative;
     img {
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 50%;
+      left: 50%;
       height: 100%;
+      // width: 100%;
       max-width: 100%;
       max-height: 100%;
+      transform: translate(-50%, -50%);
     }
   }
   &__user {
