--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -1,4 +1,12 @@
 .post-new {
+  select {
+    height: 1.5rem;
+    width:50%;
+    background-color: #fff;
+    color: rgb(99, 99, 99);
+    border: solid 1px #ccc;
+    font-size: 0.7rem;
+  }
   padding-bottom: 3rem;
   &__head {
     padding-top:3rem;
@@ -19,29 +27,179 @@
     // background-color: #fff;
     padding: 3rem 2rem 0;
     .form-content {
-      margin-bottom: 2rem;
+      margin-bottom: 3rem;
       display: flex;
       &__head {
-        margin-bottom: 1rem;
         font-weight: bold;
-        width: 20%;
+        width: 25%;
         text-align: end;
       }
       &__content {
         margin-left: 10%;
-        width: 70%;
+        width: 65%;
+      }
+    }
+    &__image {
+      &__form {
+        width: 60% !important;
+        display: flex;
+        flex-wrap: wrap;
+        &__box {
+          width: 45%;
+          margin-right: 5%;
+          &__image {
+            width: 100%;
+            padding-top: 135%;
+            background-color: #fff;
+            border: dashed 1px #ccc;
+            position: relative;
+            span {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              color: #ccc;
+            }
+            img {
+              max-width: 100%;
+              max-height: 100%;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+            }
+          }
+          label {
+            text-align: center;
+            margin: 0.2rem 0 1rem 0;
+            width: 60%;
+            font-size: 1rem;
+            background-color: #002966;
+            color: #fff;
+            border: 1px solid #002966;
+            border-radius: 0.2rem;
+            cursor: pointer;
+          }
+          &__btn:hover {
+            opacity: 0.7;
+          }
+          input {
+            float:right;
+            padding: 0 1rem;
+            margin: 0.2rem 0 1rem 0;
+            font-size: 1rem;
+            background-color: #ff2a2a;
+            color: #fff;
+            border: 1px solid #ff0202;
+            border-radius: 0.2rem;
+          }
+        }
       }
     }
     &__item-brand {
+      display: flex;
+      flex-wrap: wrap;
       margin-bottom: 2rem;
+      font-size: 0.7rem;
+      &__head {
+        font-size: 1rem;
+        h6 {
+          font-size: 0.7rem;
+          color:  #da3131;
+        }
+      }
       &__bland {
-        margin-top: -2.5rem;
-        margin-left: 30%;
-        width: 70%;
+        // margin-top: -2.5rem;
+        margin-left: 10%;
+        width: 25%;
+        position: relative;
+        &__search {
+          height: 1.5rem;
+          width:100%;
+          padding: 0.25rem 1rem;
+        }
+        #brand-search-result {
+          position: absolute;
+          top: 1.5rem;
+          width: 100%;
+          border-left: solid 1px #ccc;
+          border-right: solid 1px #ccc;
+          background-color: #fff;
+          .post-item-brand__name {
+            padding: 0.5rem;
+            margin: 0;
+            border-bottom: solid 1px #ccc;
+            cursor: pointer;
+          }
+        }
       }
       &__item {
-        margin-left: 30%;
-        width: 70%;
+        width: 20%;
+        margin-left: 5%;
+        &__select {
+          height: 1.5rem;
+          width:100% !important;
+          background-color: #fff;
+          color: rgb(99, 99, 99);
+          border: solid 1px #ccc;
+        }
+      }
+      &__decide {
+        margin-right: 5%;
+        width: 5%;
+        margin-left: 5%;
+        &__btn {
+          width: 100%;
+          height: 1.5rem;
+        }
+      }
+      &__selected {
+        margin-left: 35%;
+        width: 60%;
+        margin-top:1rem;
+        display: flex;
+        .add-item {
+          width: 15%;
+          margin-right: 5%;
+          border: solid 1px #ccc;
+          background-color: rgb(238, 238, 238);
+          padding: 0.5rem;
+          img {
+            width:100%;
+            height: auto;
+          }
+        }
+      }
+    }
+    &__title {
+      &__form {
+        input {
+          font-size: 0.7rem;
+          height: 1.5rem;
+          width: 35%;
+          padding: 0.25rem 1rem;
+        }
+      }
+    }
+    &__body {
+      &__form {
+        font-size: 0.7rem;
+        textarea {
+          padding: 1rem;
+          border: solid 1px #ccc;
+          color: rgb(99, 99, 99);
+          width: 65%;
+        }
+      }
+    }
+    &__age {
+      &__select {
+        font-size: 0.7rem;
+        input {
+          width: 20%;
+          height: 1.5rem;
+          padding-left: 1rem;
+        }
       }
     }
   }
