--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -68,18 +68,36 @@
   }
   &__contents {
     margin-top: 6em;
-    // width: 100%;
     &__post {
       display: flex;
-      width: calc(100% - 1.5em);
+      width: 100%;
+      &__items {
+        width: 15%;
+        padding: 1rem;
+        border: 1px solid rgba(128, 128, 128, 0.3);
+        border-right: none;
+        font-size: 0.5rem;
+        background-color: #fff;
+        border-radius: 0.25em 0 0 0;
+        &__item {
+          img {
+            display: block;
+            margin: 0 auto;
+          }
+          &__brand {
+            font-weight: bold;
+            text-align: center;
+          }
+
+        }
+      }
       &__left {
+        width: 50%;
         margin-right: 1.5em;
-        // width:100%;
         padding: 0 0 !important;
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
-        border-radius: 0.25em 0.25em 0 0;;
-        // box-sizing: border-box;
+        border-radius: 0 0.25em 0 0;
         &__image {
           width: 100%;
           height: auto;
@@ -130,10 +148,11 @@
         }
       }
       &__right {
+        width: 35%;
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
         border-radius: 0.25em;
-        padding:1em 0;
+        padding:1em 1rem;
         // width:100%;
         box-sizing: border-box;
         position: relative;
