--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,7 +25,7 @@
             %li 
               = link_to 'スタイル投稿', new_post_path(current_user.id)
             %li 
-              = link_to 'ユーザー情報編集', edit_user_registration_path(current_user.id)
+              = link_to 'ユーザー情報編集', edit_user_path(current_user)
           = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'header__container__right__user-menu__logout', data: { confirm: 'ログアウトすんの？' }
       - else
         .header__container__right__signin
